@@ -47,6 +47,7 @@
       --add-opens com.azure.storage.blob/com.azure.storage.blob.specialized=ALL-UNNAMED
       --add-opens com.azure.storage.blob/com.azure.storage.blob.changefeed=ALL-UNNAMED
       --add-opens com.azure.storage.blob/com.azure.storage.blob.implementation.models=ALL-UNNAMED
+      --add-opens java.base/java.nio=ALL-UNNAMED
       --add-reads com.azure.core=ALL-UNNAMED
       --add-reads com.azure.core.test=ALL-UNNAMED
       --add-reads com.azure.core.amqp=ALL-UNNAMED
